alignment issue in all three edit quotation page

--- a/src/app/routes/channel-partner/partials/lead-summary/partials/product-list-table/product-list-table.component.css
+++ b/src/app/routes/channel-partner/partials/lead-summary/partials/product-list-table/product-list-table.component.css
@@ -152,6 +152,8 @@ tbody td{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .total{
@@ -165,3 +167,7 @@ tbody td{
     margin-top: 5px;
     cursor: pointer;
 }
+form .form-control:focus{
+    border-color: #ced4da;
+    box-shadow: none;
+  }
