--- a/src/app/routes/super-admin-page/partials/lead-summary/partials/products-list-table/products-list-table.component.css
+++ b/src/app/routes/super-admin-page/partials/lead-summary/partials/products-list-table/products-list-table.component.css
@@ -153,6 +153,8 @@ tbody td{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    row-gap: 10px;
 }
 
 .total{
@@ -166,3 +168,7 @@ tbody td{
     margin-top: 5px;
     cursor: pointer;
 }
+form .form-control:focus{
+    border-color: #ced4da;
+    box-shadow: none;
+  }
